--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -107,8 +107,7 @@ section.section-article
         Are you ready? Datica has gone through the necessary audits to ensure it is compliant with the regulation.
 
         [Learn more about GDPR](/discover/#{data.site.discover['6yNMzCKn84Q4qIsm0sWmUy'].slug}).
-
-  .row.group.align-center
+  .row.align-center
     .columns.small-12.text-center
       h2.headline-3 GxP
   .row.align-center
