Updatinng nav, moving pricinig to index

--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -28,7 +28,7 @@ layout: basic
                     <br>
                     <a class="read-more" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub <i class="fa fa-angle-right"></i></a>
                     <br>
-                    <a class="read-more" href="https://datica.zendesk.com/hc/en-us" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a>
+                    <a class="read-more" href="https://help.datica.com" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a>
                 </div>
             </div>
         </div>
