fixes for xml builder files; updated links to integration anchor.

--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -117,7 +117,7 @@ section#tech-features.section-article.container-gray-12
                     .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
                       = Kramdown::Document.new(feature.desc).to_html
 
-section#tech-integration.section-article
+section#integration.section-article
   .row.align-center.text-center
     .columns.small-12.large-6
       h2.headline-3 Integrate with any EHR
