--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -6,13 +6,14 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-share_image: "//images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "platform"
 layout: platform
 priority: "0.9"
 collectionName: "platform"
 collectionOrder: 4
 ---
+<% current_page.data.share_image = image_share_platform %>
+
 <div class="container-color--white">
     <section class="section-article">
         <div class="row align-center">
