--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -6,13 +6,13 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-share_image: "//images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "platform"
 layout: platform
 collectionName: "platform"
 collectionOrder: 3
 priority: "0.9"
 ---
+- current_page.data.share_image = image_share_platform
 
 section.container-color--dark-alt style=("background-color: #23272C")
   .container-image--center(data-interchange="[/public/icons/inlined/art/compliance-bg.svg, small]")
