--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -6,17 +6,17 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-share_image: "//images.contentful.com/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "platform"
 layout: platform
 collectionName: "platform"
 collectionOrder: 1
 priority: "0.9"
 ---
+- current_page.data.share_image = image_share_platform
 
 .container-color--dark-grad-blue
   section.section-article
-    .row
+    .row.align-middle
       .columns.small-12.medium-5
         h1.headline-2 End-to-end compliance on AWS and Azure is possible.
         p.small The Datica Platform fills the compliance gaps on top of public clouds like AWS and Azure by combining the best technology available and mapping it to frameworks like HIPAA, HITRUST, GDPR, and GxP. Customers use Kubernetes-enabled orchestration to deploy containerized workloads to the Platform that <strong>are guaranteed to be continuously compliant</strong>.
@@ -55,6 +55,9 @@ priority: "0.9"
               li Engineering orgs who need compliance guarantees but can’t build everything themselves for less than one cloud engineer FTE.
               li Teams who need compliance help but have a hard requirement to directly own their AWS or Azure accounts.
             p All other installable technologies aren’t platforms meant to greatest compliance coverage with the best experience. Instead, you pay for consultant service fees.
+      .row
+        .columns.small-12.text-center
+          = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo Today", :url => "/demo", :button_classes => "button hollow", :icon => "icon-event-check", :icon_color => "blue", :icon_align => "left" }
 
 section.section-article.container-color--dark-alt
   .row.group.align-center
