Moved and remapped paths for SVG & platform artwork. Be sure not to put linked art in the /icons/inlined folder in the future. Those are for ruby inlining.

--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -16,7 +16,7 @@ ctaCustom: true
 - current_page.data.share_image = image_share_platform
 
 section.container-color--dark-alt style=("background-color: #23272C")
-  .container-image--center(data-interchange="[/public/icons/inlined/art/aws-bg.svg, small]")
+  .container-image--center(data-interchange="[https://images.contentful.com/189dvqdsjh46/3KaBSDhbtKc2cEewmeKQ0U/a8a9e2db412be3f6a8ffeb2a721f8d25/aws-bg.jpg, small]")
     section.section-article
         .row.align-center
             .columns.small-12.medium-10.large-6.text-center
@@ -57,7 +57,7 @@ section.container-color--dark-alt style=("background-color: #23272C")
         p.group In the same way that you'll rely on AWS to secure the physical infrastructure in their datacenters, you should rely on Datica to deliver the 9/10ths of compliance required for HIPAA, HITRUST, GDPR, and more.
 
 section style=("background-color: #FFF")
-  .container-image--center(data-interchange="[/public/icons/inlined/art/datica-aws-bg.svg, small]")
+  .container-image--center(data-interchange="[/public/img/art/datica-aws-bg.svg, small]")
     section.section-article
       .row.align-center
         .columns.small-12.medium-10.large-8.text-center
@@ -84,7 +84,7 @@ section style=("background-color: #FFF")
               p Application security and administrative compliance are left to you. By utilizing Datica's <a href="https://datica.com/open-source/policies/">open source policies</a>, you can achieve 100% compliance in a matter of days, not months.
 
 .container-color--gray-light
-  .container-image--center(data-interchange="[/public/icons/inlined/art/hcms-bg.svg, small]")
+  .container-image--center(data-interchange="[/public/img/art/hcms-bg.svg, small]")
     section.section-article (id="platform-benefits-3")
       .row.align-center
         .columns.small-12.medium-8.text-center
