--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -32,7 +32,7 @@ aside.hide-for-large.pad--sm.container-color--blue-alt
         i.fa.fa-icon.fa-angle-right
 
 section.container-color--dark-alt style=("background-color: #23272C")
-  .container-image--center(data-interchange="[/public/icons/inlined/art/platform-tech-bg.svg, small]")
+  .container-image--center(data-interchange="[/public/img/art/platform-tech-bg.svg, small]")
     section.section-article
       .row.align-center
         .columns.small-12
@@ -153,7 +153,7 @@ section.section-article.container-color--gray-light
         = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
 
 .container-color--gray-light
-  .container-image--center(data-interchange="[/public/icons/inlined/art/hcms-bg.svg, small]")
+  .container-image--center(data-interchange="[/public/img/art/hcms-bg.svg, small]")
     section.section-article
       .row.align-center
         .columns.small-12.text-center.group
