Omitting vestigal hubspot script tag include

--- a/source/seldon/content.html.erb
+++ b/source/seldon/content.html.erb
@@ -3,6 +3,7 @@ title: Content Containers
 navTitle: Content
 summary: "Example content lists for collections of content."
 customCSS: styleguide
+hide_from_sitemap: true
 ---
 
 <section id="content-top" class="section-article">
