--- a/source/partials/ctas/_platform-cta.erb
+++ b/source/partials/ctas/_platform-cta.erb
@@ -1,5 +1,5 @@
 <!-- cta -->
-<section id="ctaBottom" class="section-article container-color--dark-alt container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
+<section id="ctaBottom" class="section-article container-color--dark-alt container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
 <!-- <section id="ctaBottom" class="section-article container-image--center container-gray-12" data-interchange="[/public/img/bg/blur-colored-bg-4.jpg, small]"> -->
     <div class="row align-center">
         <div class="columns small-12 large-8">
