--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -160,7 +160,7 @@ section.section-article.container-color--gray-light
             p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
 
 /! cta
-section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
+section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
   .row.align-center
     .columns.small-12.medium-10.text-center
       h2.headline-3.group <strong>End-to-end compliance</strong> on AWS and Azure is possible.
