--- a/source/platform/_integration.html.erb
+++ b/source/platform/_integration.html.erb
@@ -208,7 +208,7 @@ ctaCustom: true
         </div>
     </div>
 </section>
-<section class="section-article section--cta-blue container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png, medium]">
+<section class="section-article section--cta-blue container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
     <div class="row align-center">
         <div class="columns small-12 large-8">
             <aside class="text-center">
