--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -141,7 +141,7 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
             p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
 
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]"
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
