--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -209,7 +209,7 @@ collectionOrder: 4
     </div>
 </section>
 
-<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
+<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]">
     <div class="row align-center">
         <div class="columns small-12 medium-10 text-center">
             <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
