--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -134,7 +134,7 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
           h2.headline-3.nomargin Extending critical compliance controls
       .row.align-center.align-middle
         .columns.small-12.medium-6.large-7
-          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png" /
+          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png?w=1200" /
           .callout.drop
             p.lead.highlight.text-center Continuous <strong>compliance</strong>, delivered.
             p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
