Moved video to Wistia, new embed code.

--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -60,8 +60,8 @@ section.container-color--dark-alt style=("background-color: #23272C")
           p.text-center.group See where each piece of the Platform fits, from logging and monitoring, to networking and load balancing. The animation below is a comprehensive architectural overview of the Platform.
       .row.align-center
         .columns.small-12
-          video#vid-platform-diagram.html5-video-full-width.drop--big autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/5193b08c622f99caf35eaccb4bc85799/Datica_Platform_Diagram_animation_2018_poster.png"
-            source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/ea208e44be2fbed57849c51db0bf5233/Datica_Platform_Diagram_animation_2018_02.m4v" type="video/mp4"
+
+          <script src="https://fast.wistia.com/embed/medias/kbhkf6h7u9.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_kbhkf6h7u9 seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
 
 section#tech-features.section-article.container-gray-12
   .row.align-center
