--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -63,11 +63,9 @@ section.section-article.container-color--dark-alt
   .row.group.align-center
     .columns.small-12
       h2.headline-3.group.text-center.spaced-out Understanding Shared Responsibility
-      script async="" src="https://fast.wistia.com/embed/medias/08ebxufc4q.jsonp"
-      script async="" src="https://fast.wistia.com/assets/external/E-v1.js"
-      .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;")
-        .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;"
-          .wistia_embed.wistia_async_08ebxufc4q class=("seo=false videoFoam=true") style="height:100%;width:100%"   
+
+      <script src="https://fast.wistia.com/embed/medias/08ebxufc4q.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_08ebxufc4q seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+
   .row.align-center
     - data.views.platform.shared_responsibility.each do | block |
       .columns.small-12.medium-4
