--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -25,7 +25,7 @@ priority: "0.9"
         img.float-right-on-medium alt=("Datica Platform Architecture") src="https://images.contentful.com/189dvqdsjh46/6vT9Mx9TlmoEAiGcOkwG24/b4f31fda3c1b6fcd6aeb5f926ce3979a/platform_iso_architecture-2x.png"
 
 .container-color--gray-light
-  .container-image--center(data-interchange="[/public/img/art/consumption-bg.svg, large]")
+  .container-image--fixed(data-interchange="[https://images.contentful.com/189dvqdsjh46/34GRLxPQ5y0OcOguemCYgC/cd1218b27c17478ccd8934425cd6dc6b/bg-rects-blue-light.png?w=1600&h=500&fit=crop, large]")
     section.section-article
       .row.align-center.text-center
         .columns.small-12
@@ -72,7 +72,7 @@ section.section-article.container-color--dark-alt
         = Kramdown::Document.new(block).to_html
 
 .container-image--fixed.container-color--dark
-  .container-image--center(data-interchange="[/public/img/art/aws-apn-bg.svg, large]")
+  .container-image--center(data-interchange="[https://images.contentful.com/189dvqdsjh46/qDYJLe7zyKsaU6OoGCSWg/55fed65d63a33a39b690697200a0d5b2/bg-rects-blue-dark.png?w=2400&h=1200&fit=thumb&fm=jpg&q=80, large]")
     section.section-article
       .row.align-middle.align-center
         .columns.small-12.medium-8
@@ -122,7 +122,7 @@ section#tech-hcms.section-article.container-color--dark-grad-blue
             p= step.desc
             = partial "partials/snippets/button", :locals => { :label => step.button.label, :title => step.button.label, :url => step.button.url, :button_classes => "button small secondary", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
 .container-color--gray-light
-  .container-image--center(data-interchange="[/public/img/art/hcms-bg.svg, large]")
+  .container-image--fixed(data-interchange="[https://images.contentful.com/189dvqdsjh46/34GRLxPQ5y0OcOguemCYgC/cd1218b27c17478ccd8934425cd6dc6b/bg-rects-blue-light.png?w=1600&h=500&fit=crop, large]")
     section.section-article
       .row.align-center
         .columns.small-12.text-center.group
