--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -323,13 +323,12 @@
             }// you can adjust opacity in :after if needed
         }
         &--gray-gradient{
-            background-image: linear-gradient(top, $color_light-alt 50%, $color_white 100%);
-            background-image: -webkit-linear-gradient(top, $color_light-alt 50%, $color_white 100%);
-            background-image: -o-linear-gradient(top, $color_light-alt 50%, $color_white 100%);
+            @include gradient(top, $color_light-alt 50%, $color_white 100%);
         }
         &--dark-grad-blue {
             // @include noisy;
             color: $color_white; // optional, only spec if needed
+            background-color: #08142f; // fallback
             @include gradient(-155deg, #1B2044 0%, #17181D 52%, #17181D 100%);
             // &:before {
             //     background-image: linear-gradient(-135deg, #1B2044 0%, #17181D 52%, #17181D 100%);
