--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -56,7 +56,7 @@ section.container-color--dark-alt style=("background-color: #23272C")
         p When you add up all of the compliance responsibilities across the entire spectrum of the cloud, you start to see just how large it is. No one company should take on even half of this.
         p.group In the same way that you'll rely on AWS to secure the physical infrastructure in their datacenters, you should rely on Datica to deliver the 9/10ths of compliance required for HIPAA, HITRUST, GDPR, and more.
 
-section style=("background-color: #FFF")
+section.container-gray-3
   .container-image--center(data-interchange="[/public/img/art/datica-aws-bg.svg, small]")
     section.section-article
       .row.align-center
@@ -83,22 +83,8 @@ section style=("background-color: #FFF")
               p.lead.text-center <strong>Application Layer</strong>
               p Application security and administrative compliance are left to you. By utilizing Datica's <a href="https://datica.com/open-source/policies/">open source policies</a>, you can achieve 100% compliance in a matter of days, not months.
 
-.container-color--gray-light
-  .container-image--center(data-interchange="[/public/img/art/hcms-bg.svg, small]")
-    section.section-article (id="platform-benefits-3")
-      .row.align-center
-        .columns.small-12.medium-8.text-center
-          h2.headline-4.spaced-out Healthcare Compliance Management System
-      .row.align-center
-        .columns.small-12.medium-6.text-center.group
-          p The compliance dashboard gives you an aggregate view of compliance performance across your cluster on the Licensed versions of the Platform.
-      .row.align-center.align-middle
-        .columns.small-12.medium-6.large-7
-          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png?w=1200" /
-          .callout.drop
-            p.lead.highlight.text-center Continuous <strong>compliance</strong>, delivered.
-            p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
-            p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
+section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.contentful.com/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
+  = partial "partials/section-promos/hcms-screenshot"
 
 aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
   .row.align-center
