--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -21,38 +21,36 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
       title chevron-down
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
-section.container-color--dark-alt style=("background-color: #23272C")
-  .container-image--center(data-interchange="[/public/img/art/platform-tech-bg.svg, small]")
-    section.section-article
+section.section-article.container-color--dark-grad-blue.container-image--center(data-interchange="[https://images.contentful.com/189dvqdsjh46/3X0hgoNCSs0Y4KuqEOIqCg/4817329d1d35ec44a08c8767c72fafc3/bg-circles-blue-dark.png?w=1600&h=1600&fit=crop, medium]")
+  .row.align-center
+    .columns.small-12
       .row.align-center
-        .columns.small-12
-          .row.align-center
-            .columns.small-12.medium-8
-              h1.headline-2.text-center Platform Technology
-              p.text-center.group See how the Platform works, the technology involved, and what it means to be HITRUST CSF certified on top of cloud providers like AWS and Azure.
-          .row.row--card-grid
-            .columns.small-12.medium-12.large-4
-              .card.drop.container-color--gray-light
-                img src="https://images.contentful.com/189dvqdsjh46/6ydXBtXKRU2Yu0mmsgYCcY/a16c46029da27d0b379fcc69fad5b05b/layer-infra.png" alt="Infrastructure Layer" class="soft-border"
-                .card-section
-                  p.lead.text-center <strong>Infrastructure Layer</strong>
-                  p AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
-                  p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
-            .columns.small-12.medium-12.large-4
-              .card.drop.container-color--gray-light
-                img src="https://images.contentful.com/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
-                .card-section
-                  p.lead.text-center <strong>Platform Layer</strong>
-                  p Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
-                  p Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
-            .columns.small-12.medium-12.large-4
-              .card.drop.container-color--gray-light
-                img src="https://images.contentful.com/189dvqdsjh46/6bDMG7j3VYuoYkwEK4OkC2/5fcb3139b6401fbd1262f5f4285fc3a6/layer-app.png" alt="Application Layer" class="soft-border"
-                .card-section
-                  p.lead.text-center <strong>Application Layer</strong>
-                  p Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
-                  p Administration of AWS Primitives or Azure Services are no longer required. Instead, customers simply allocate RAM to individual containers. Datica takes care of the rest.
-                  p Deployment is done either through a <code>git push</code> buildpack-based process or by pushing custom Docker containers.
+        .columns.small-12.medium-8
+          h1.headline-2.text-center Platform Technology
+          p.text-center.group See how the Platform works, the technology involved, and what it means to be HITRUST CSF certified on top of cloud providers like AWS and Azure.
+      .row.row--card-grid
+        .columns.small-12.medium-12.large-4
+          .card.drop.container-color--gray-light
+            img src="https://images.contentful.com/189dvqdsjh46/6ydXBtXKRU2Yu0mmsgYCcY/a16c46029da27d0b379fcc69fad5b05b/layer-infra.png" alt="Infrastructure Layer" class="soft-border"
+            .card-section
+              p.lead.text-center <strong>Infrastructure Layer</strong>
+              p AWS and Azure provide VPCs, which cover a portion of compliance and security requirements.
+              p Within a VPC, the Datica Platform is installed. Everything within the Platform is strictly managed in adherence to Datica policies. The Platform uses a combination of Kubernetes and proprietary technology to orchestrate all DevOps duties for customers.
+        .columns.small-12.medium-12.large-4
+          .card.drop.container-color--gray-light
+            img src="https://images.contentful.com/189dvqdsjh46/5cUz9cCIPSCag0CiQi44u4/b450448536c2d754573266b59bd8ea7d/layer-platform.png" alt="Platform Layer" class="soft-border"
+            .card-section
+              p.lead.text-center <strong>Platform Layer</strong>
+              p Customers create an account within the Datica Platform. It is through the account that they gain access to HIPAA-eligible AWS Primitives or Azure Services, which are strictly controlled by the Platform.
+              p Within a customer account, the Platform containerizes all technology required to meet compliance controls from HIPAA, HITRUST, GDPR, and GxP. Things like logging, intrusion detection, and penetration testing, to name a few.
+        .columns.small-12.medium-12.large-4
+          .card.drop.container-color--gray-light
+            img src="https://images.contentful.com/189dvqdsjh46/6bDMG7j3VYuoYkwEK4OkC2/5fcb3139b6401fbd1262f5f4285fc3a6/layer-app.png" alt="Application Layer" class="soft-border"
+            .card-section
+              p.lead.text-center <strong>Application Layer</strong>
+              p Customers deploy their applications to containerized environments. They can have multiple environments within their Datica account, managing any type of technical use case.
+              p Administration of AWS Primitives or Azure Services are no longer required. Instead, customers simply allocate RAM to individual containers. Datica takes care of the rest.
+              p Deployment is done either through a <code>git push</code> buildpack-based process or by pushing custom Docker containers.
 
       .row.align-center
         .columns.small-12.medium-8
@@ -142,22 +140,8 @@ section.section-article.container-color--gray-light
         p We open sourced our <a href="https://github.com/daticahealth/Mirth-Transforms">Mirth HL7 transformations</a> used over the past three years. With OCI Mirth, you can get started today using these tools. Or, should you require help integrating into a specific hospital, we offer professional services to project manage an integration to completion.
         = partial "partials/snippets/button", :locals => { :label => "Test out your own version of Mirth today", :url => "/pricing", :button_classes => "button text-center", :icon => "icon-chevron-right", :icon_color => "white" }
 
-.container-color--gray-light
-  .container-image--center(data-interchange="[/public/img/art/hcms-bg.svg, small]")
-    section.section-article
-      .row.align-center
-        .columns.small-12.text-center.group
-          h2.headline-4.spaced-out Healthcare Compliance Management System
-      .row.align-center
-        .columns.small-12.text-center.group
-          h2.headline-3.nomargin Extending critical compliance controls
-      .row.align-center.align-middle
-        .columns.small-12.medium-6.large-7
-          img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/2mbtHnzGTyAayWaeiQqmyk/9f63a21da504f6cb8fc2808a864d13bf/hcms-mockups-2x.png?w=1200" /
-          .callout.drop
-            p.lead.highlight.text-center Continuous <strong>compliance</strong>, delivered.
-            p Visibility into the continuous compliance and security provided by the Datica Platform is important to our customers. The HCMS is a compliance dashboard that gives insights into all compliance controls across customer environments.
-            p The HCMS is shipping with initial versions of our Licensed Platform. To learn more about the HCMS, <a href="/contact">schedule time to talk with us today</a>.
+section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.contentful.com/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
+  = partial "partials/section-promos/hcms-screenshot"
 
 /! cta
 section#ctaBottom.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]"
